--- a/Godot.DependencyInjection.Sample/Godot.DependencyInjection.Sample.csproj
+++ b/Godot.DependencyInjection.Sample/Godot.DependencyInjection.Sample.csproj
@@ -4,7 +4,12 @@
         <EnableDynamicLoading>true</EnableDynamicLoading>
     </PropertyGroup>
     <ItemGroup>
-        <ProjectReference Include="..\Skerga.Godot.DependencyInjection\Skerga.Godot.DependencyInjection.csproj"
+        <ProjectReference Include="..\Godot.DependencyInjection\Godot.DependencyInjection.csproj"
                           OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
+
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1"/>
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1"/>
+        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1"/>
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.1"/>
     </ItemGroup>
 </Project>
