--- a/Godot.DependencyInjection/Godot.DependencyInjection.csproj
+++ b/Godot.DependencyInjection/Godot.DependencyInjection.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <IsPackable>false</IsPackable>
@@ -10,7 +9,12 @@
         <IsRoslynComponent>true</IsRoslynComponent>
 
         <RootNamespace>Godot.DependencyInjection</RootNamespace>
-        <PackageId>Godot.DependencyInjection</PackageId>
+        <PackageId>Skerga.Godot.DependencyInjection</PackageId>
+        <PackageTags>Godot; Dependency Injection</PackageTags>
+        <Version>0.1.0</Version>
+        <Authors>Sebastian Sommer</Authors>
+
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <ItemGroup>
@@ -21,6 +25,4 @@
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0"/>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.3.0"/>
     </ItemGroup>
-
-
 </Project>
