--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,11 +28,11 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
-        run: dotnet build --no-restore --configuration Release
+        run: dotnet build --no-restore --configuration Release /p:Version=${VERSION}
       - name: Test
-        run: dotnet test --no-build --verbosity normal --configuration Release
+        run: dotnet test --no-build --verbosity normal --configuration Release /p:Version=${VERSION}
       - name: Pack
-        run: dotnet pack --configuration Release --no-build --output .
+        run: dotnet pack --configuration Release /p:Version=${VERSION} --no-build --output .
       
       # Get a short-lived NuGet API key
       - name: NuGet login (OIDC → temp API key)
@@ -41,6 +41,6 @@ jobs:
         with:
           user: ${{ secrets.NUGET_USER }}
           
-    # Push the package
-    #- name: NuGet push
-    #  run: dotnet nuget push artifacts/my-sdk.nupkg --api-key ${{steps.login.outputs.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
+      # Push the package
+      - name: NuGet push
+        run: dotnet nuget push Skerga.Godot.DependencyInjection.${VERSION}.nupkg --api-key ${{steps.login.outputs.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
