--- a/Godot.DependencyInjection.Sample/Godot.DependencyInjection.Sample.csproj
+++ b/Godot.DependencyInjection.Sample/Godot.DependencyInjection.Sample.csproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <EnableDynamicLoading>true</EnableDynamicLoading>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="..\Godot.DependencyInjection\Godot.DependencyInjection.csproj"
