--- a/Godot.DependencyInjection/Godot.DependencyInjection.csproj
+++ b/Godot.DependencyInjection/Godot.DependencyInjection.csproj
@@ -11,8 +11,10 @@
 
         <RootNamespace>Godot.DependencyInjection</RootNamespace>
         <PackageId>Skerga.Godot.DependencyInjection</PackageId>
-        <PackageTags>Godot; Dependency Injection</PackageTags>
+        <PackageTags>Godot; DependencyInjection</PackageTags>
         <Authors>Sebastian Sommer</Authors>
+        <RepositoryUrl>https://github.com/Skerga/Godot.DependencyInjection</RepositoryUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
     </PropertyGroup>
 
     <ItemGroup>
@@ -27,5 +29,9 @@
     <ItemGroup>
         <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true"
               PackagePath="analyzers/dotnet/cs" Visible="false" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 </Project>
